--- a/Ausarbeitung/Proseminar.bib
+++ b/Ausarbeitung/Proseminar.bib
@@ -11,4 +11,10 @@
   note         = {Skript, abgerufen am 21.4.2025},
 }
 
+@Misc{Kirchhoff,
+  author       = {Wikipedia},
+  title        = {Kirchhoffsche Regeln},
+  howpublished = {https://de.wikipedia.org/w/index.php?title=Kirchhoffsche_Regeln&oldid=249322177},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
