--- a/graphics/AbschlussMitWiderstand/document.tex
+++ b/graphics/AbschlussMitWiderstand/document.tex
@@ -15,7 +15,7 @@
     arrow/.style={decoration={mark=at position #1 with {\arrow{Stealth}}}},
     reversearrow/.style={decoration={mark=at position #1 with {\arrowreversed{Stealth}}}},
     line style/.style={solid, black}
-    resistor label/.style={l=$R_{x}$}}
+    resistor label/.style={l=$R_{x}$}, y=0.75cm}
 
 \coordinate (A1) at (1, 10);
 \coordinate (A2) at (3, 10);
