--- a/graphics/ElektrischeFeldLinien/document.tex
+++ b/graphics/ElektrischeFeldLinien/document.tex
@@ -10,7 +10,7 @@
 \begin{document}
 
 
-\begin{tikzpicture}
+\begin{tikzpicture}[baseline=(current bounding box.south)]
 
 % Define styles
 \tikzset{
