--- a/graphics/ErstatzSchaltbild1/document.tex
+++ b/graphics/ErstatzSchaltbild1/document.tex
@@ -20,20 +20,20 @@
 %right verical line
 \draw[dashed] (6,-1) -- (6,8);
 
-\draw[Stealth-Stealth] (2, 4.25) -- (6, 4.25) node[pos=0.5, circle, fill=white] {d$x$};
+\draw[Stealth-Stealth] (2, 4.25) -- (6, 4.25) node[pos=0.5, circle, fill=white] {$\mathrm{d} z$};
 
 % resistor
 \draw[{Circle[open, fill=white]}-] ($(2,3) - (2pt,0)$) -- (3,3);
 \draw[-{Circle[open, fill=white]}] (5,3) -- ($(6,3) + (2pt,0)$);
 % Resistor (no arrow)
-\draw (3,3) to[R, l=$R_{x}$, fill=black] (5,3);
+\draw (3,3) to[R, l=$R_{z}$, fill=black] (5,3);
 
 
 % capacitor
 \draw[{Circle[open, fill=white]}-{Circle[open, fill=white]}] ($(2,0) - (2pt,0)$) -- ($(6,0) + (2pt,0)$);
 \draw[{Circle[open, fill=black]}-] ($(3,3) + (0, 2pt)$) -- (3,2);
 \draw[-{Circle[open, fill=black]}] (3,1) -- ($(3,0) - (0, 2pt)$);
-\draw (3,2) to[C, l=$C_{x}$] (3,1);
+\draw (3,2) to[C, l=$C_{z}$] (3,1);
 
 \end{circuitikz}
 
