--- a/Ausarbeitung/document.tex
+++ b/Ausarbeitung/document.tex
@@ -313,42 +313,42 @@ bei $u_{r}$ und $i_{r}$ um rücklaufende Wellen. Wir betrachten dazu Abbildung~\
         \label{VorwaertsWelle}
     \end{center}
 \end{figure}
-
-Sei dazu $t_{0} = 0$, $t_{1} > 0$ und $x_{0} > 0$. Dann ist die Welle zum Zeitpunkt $t_{1} > 0$ die Strecke $x = x_{1}
-= v t_{1} + x_{0}$ vorangeschritten. Es gilt $u(x_{0}, t_{0}) = u_{v}(-x_{0})$ und
+Sei dazu $t_{0} = 0$, $t_{1} > 0$ und $z_{0} > 0$. Dann ist die Welle zum Zeitpunkt $t_{1} > 0$ die Strecke
+$z = z_{1} = v t_{1} + z_{0}$ vorangeschritten. Es gilt $u(z_{0}, t_{0}) = u_{h}(-z_{0})$ und
 \begin{align*}
-    u(x_{1}, t_{1}) &= u_{v}(v t_{1} - x_{1}) \\
-                    &= u_{v}(v t_{1} - (v t_{1} + x_{0})) \\
-                    &= u_{v}(- x_{0}) \\
-                    &= u(x_{0}, t_{0}).
+    u(z_{1}, t_{1}) &= u_{h}(v t_{1} - z_{1}) \\
+                    &= u_{h}(v t_{1} - (v t_{1} + z_{0})) \\
+                    &= u_{h}(- z_{0}) \\
+                    &= u(z_{0}, t_{0}).
 \end{align*}
-Wegen $x_{1} > x_{0}$ ist dies also die vorwärts laufende Welle. Analog beschreiben $u_{r}$ bzw. $i_{r}$ jeweils eine
+Wegen $z_{1} > z_{0}$ ist dies also die vorwärts laufende Welle. Analog beschreiben $u_{r}$ bzw. $i_{r}$ jeweils eine
 rücklaufende Welle.
 
 
 \subsubsection{Wellengeschwindigkeit}
 
-Setzen wir die allgemeine Lösung $u_{v}(v t - x)$ in die Gleichungen \eqref{eq:Dgl7} und \eqref{eq:Dgl8} ein, so
+Setzen wir die allgemeine Lösung $u_{h}(v t - z)$ in die Gleichungen \eqref{eq:Dgl7} und \eqref{eq:Dgl8} ein, so
 erhalten wir mit
 \begin{equation*}
-    \frac{\partial u_{v}}{\partial x} = \frac{\partial u_{v}}{\partial w} \frac{\partial w}{\partial x} = -1
+    \frac{\partial u_{h}}{\partial z} = \frac{\partial u_{h}}{\partial w} \frac{\partial w}{\partial z} = -1,
     \quad \text{und} \quad
-    \frac{\partial u_{v}}{\partial t} = \frac{\partial u_{v}}{\partial w} \frac{\partial w}{\partial t} = v
+    \frac{\partial u_{h}}{\partial t} = \frac{\partial u_{h}}{\partial w} \frac{\partial w}{\partial t} = v
 \end{equation*}
+die Gleichungen
 \begin{equation*}
-    \frac{\partial^{2} u_{v}}{\partial x^{2}} = -1 \frac{\partial}{\partial x} \left( \frac{\partial u_{v}}{\partial w}
-    \right) = -1 \frac{\partial^{2} u_{v}}{\partial w^{2}} \frac{\partial w}{\partial x} = \frac{\partial^{2}
-    u_{v}}{\partial w^{2}}
+    \frac{\partial^{2} u_{h}}{\partial z^{2}} = -1 \frac{\partial}{\partial z} \left( \frac{\partial u_{h}}{\partial w}
+    \right) = -1 \frac{\partial^{2} u_{h}}{\partial w^{2}} \frac{\partial w}{\partial z} = \frac{\partial^{2}
+    u_{h}}{\partial w^{2}}
 \end{equation*}
 und
 \begin{equation*}
-    \frac{\partial^{2} u_{v}}{\partial t^{2}} = v \frac{\partial}{\partial t} \left( \frac{\partial u_{v}}{\partial w}
-    \right) = v \frac{\partial^{2} u_{v}}{\partial w^{2}} \frac{\partial w}{\partial t} =v^{2} \frac{\partial^{2}
-        u_{v}}{\partial w^{2}}.
+    \frac{\partial^{2} u_{h}}{\partial t^{2}} = v \frac{\partial}{\partial t} \left( \frac{\partial u_{h}}{\partial w}
+    \right) = v \frac{\partial^{2} u_{h}}{\partial w^{2}} \frac{\partial w}{\partial t} =v^{2} \frac{\partial^{2}
+        u_{h}}{\partial w^{2}}.
 \end{equation*}
 Es folgt somit
 \begin{equation*}
-    \frac{\partial^{2} u_{v}}{\partial x^{2}} = L^{\prime} \, C^{\prime} \, \frac{\partial^{2} u_{v}}{\partial t^{2}}
+    \frac{\partial^{2} u_{h}}{\partial z^{2}} = L^{\prime} \, C^{\prime} \, \frac{\partial^{2} u_{v}}{\partial t^{2}}
     \Leftrightarrow
     \frac{\partial^{2} u_{v}}{\partial w^{2}} = L^{\prime} \, C^{\prime} \, v^{2} \frac{\partial^{2} u_{v}}{\partial
     w^{2}}.
@@ -357,7 +357,7 @@ Nachdem wir die partielle Ableitung herauskürzen, erhalten wir also
 \begin{equation}
     v = \frac{1}{\sqrt{L^{\prime} \, C^{\prime}}} \label{eq:WellenGeschw1}.
 \end{equation}
-überraschend ist nun, dass die Ausbreitungsgeschwindigkeit des Signals im verlustlosen Leiter durch die Parameter
+Überraschend ist nun, dass die Ausbreitungsgeschwindigkeit des Signals im verlustlosen Leiter von den Parametern
 $L^{\prime}$ und $C^{\prime}$ abhängt (und damit vom Isolatormaterial zwischen den Leitern), jedoch nicht vom
 Leitermaterial selbst!
 
@@ -368,51 +368,51 @@ Wir kommen nun zu einer weiteren wichtigen Größe, dem Wellenwiderstand.
 Setzen wir Gleichungen \eqref{eq:AllgEq1}, \eqref{eq:AllgEq2} und \eqref{eq:WellenGeschw1} in \eqref{eq:Dgl7} und
 \eqref{eq:Dgl8} ein, so folgt
 \begin{align*}
-    \frac{\partial u}{\partial x} &= \frac{\partial u_{v}}{\partial w_{-}} \frac{\partial w_{-}}{\partial x}
-    + \frac{\partial u_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial x}
+    \frac{\partial u}{\partial z} &= \frac{\partial u_{h}}{\partial w_{-}} \frac{\partial w_{-}}{\partial z}
+    + \frac{\partial u_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial z}
     =
-    \frac{\partial u_{v}}{\partial w_{-}} \left(- \frac{1}{v} \right) + \frac{\partial u_{r}}{\partial w_{+}}
+    \frac{\partial u_{h}}{\partial w_{-}} \left(- \frac{1}{v} \right) + \frac{\partial u_{r}}{\partial w_{+}}
     \frac{1}{v} \\[1ex]
-    \frac{\partial i}{\partial t} &= \frac{\partial i_{v}}{\partial w_{-}} - \frac{\partial i_{r}}{\partial w_{+}}
+    \frac{\partial i}{\partial t} &= \frac{\partial i_{h}}{\partial w_{-}} - \frac{\partial i_{r}}{\partial w_{+}}
 \end{align*}
 und
 \begin{align*}
-    \frac{\partial i}{\partial x} &= \frac{\partial i_{v}}{\partial w_{-}} \frac{\partial w_{-}}{\partial x}
-    + \frac{\partial i_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial x}
+    \frac{\partial i}{\partial z} &= \frac{\partial i_{h}}{\partial w_{-}} \frac{\partial w_{-}}{\partial z}
+    + \frac{\partial i_{r}}{\partial w_{+}} \frac{\partial w_{+}}{\partial z}
     =
-    \frac{\partial i_{v}}{\partial w_{-}} \left(- \frac{1}{v} \right) - \frac{\partial i_{r}}{\partial w_{+}}
+    \frac{\partial i_{h}}{\partial w_{-}} \left(- \frac{1}{v} \right) - \frac{\partial i_{r}}{\partial w_{+}}
     \frac{1}{v} \\[1ex]
-    \frac{\partial u}{\partial t} &= \frac{\partial u_{v}}{\partial w_{-}}
+    \frac{\partial u}{\partial t} &= \frac{\partial u_{h}}{\partial w_{-}}
     \underbrace{\frac{\partial w_{-}}{\partial t} }_{=1}
     -
     \frac{\partial u_{r}}{\partial w_{+}} \underbrace{\frac{\partial w_{+}}{\partial t} }_{=1}
 \end{align*}
 und somit
 \begin{alignat*}{3}
-    \frac{\partial u}{\partial x} &= \frac{1}{v} \left( \frac{\partial u_{r}}{\partial w_{+}} -
-    \frac{\partial u_{v}}{\partial w_{-}} \right) &= - L^{\prime} \left( \frac{\partial i_{v}}{\partial w_{-}} -
+    \frac{\partial u}{\partial z} &= \frac{1}{v} \left( \frac{\partial u_{r}}{\partial w_{+}} -
+    \frac{\partial u_{h}}{\partial w_{-}} \right) &= - L^{\prime} \left( \frac{\partial i_{h}}{\partial w_{-}} -
     \frac{\partial i_{r}}{\partial w_{+}} \right) &= L^{\prime} \, \frac{\partial i}{\partial t} \\[1ex]
-    \frac{\partial i}{\partial x} &= - \frac{1}{v} \left( \frac{\partial i_{r}}{\partial w_{+}} +
-    \frac{\partial i_{v}}{\partial w_{-}} \right) &= - C^{\prime} \left( \frac{\partial u_{v}}{\partial w_{+}} +
+    \frac{\partial i}{\partial z} &= - \frac{1}{v} \left( \frac{\partial i_{r}}{\partial w_{+}} +
+    \frac{\partial i_{h}}{\partial w_{-}} \right) &= - C^{\prime} \left( \frac{\partial u_{h}}{\partial w_{+}} +
     \frac{\partial u_{r}}{\partial w_{-}} \right) &= C^{\prime} \, \frac{\partial u}{\partial t}.
 \end{alignat*}
-Da die Funktionen $u_{v}$ und $u_{r}$ bzw. $i_{v}$ und $i_{r}$ unabhängig sind, folgt
+Da die Funktionen $u_{h}$ und $u_{r}$ bzw. $i_{h}$ und $i_{r}$ unabhängig sind, folgt
 \begin{equation}
-    - \frac{1}{v} \, \frac{\text{d} u_{v}}{\text{d} w_{-}} = - L^{\prime} \, \frac{\text{d} i_{v}}{\text{d} w_{-}}.
+    - \frac{1}{v} \, \frac{\text{d} u_{h}}{\text{d} w_{-}} = - L^{\prime} \, \frac{\text{d} i_{h}}{\text{d} w_{-}}.
 \end{equation}
 Integrieren beider Seiten liefert
 \begin{equation}
-    u_{v}(w_{-}) = v \, L^{\prime} \, i_{v}(w_{-}) + c_{v} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{v}(w_{-}) +
-    c_{v},
+    u_{h}(w_{-}) = v \, L^{\prime} \, i_{h}(w_{-}) + c_{h} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{h}(w_{-}) +
+    c_{h},
 \end{equation}
 und
 \begin{equation}
     u_{r}(w_{+}) = v \, L^{\prime} \, i_{r}(w_{+}) + c_{r} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} \, i_{r}(w_{+}) +
     c_{r},
 \end{equation}
-wobei $c_{v}$ und $c_{r}$ Konstanten sind. Setzen wir $c_{v} = c_{r} = 0$, dann erhalten wir
+wobei $c_{h}$ und $c_{r}$ Konstanten sind. Setzen wir $c_{h} = c_{r} = 0$, dann erhalten wir
 \begin{equation}
-    \frac{u_{v}(x, t)}{i_{v}(x, t)} = \frac{u_{r}(x, t)}{i_{r}(x, t)} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} = Z_{w}.
+    \frac{u_{h}(z, t)}{i_{h}(z, t)} = \frac{u_{r}(z, t)}{i_{r}(z, t)} = \sqrt{\frac{L^{\prime}}{C^{\prime}}} = Z_{w}.
 \end{equation}
 Diese Konstante hat die Maßeinheit eines Widerstandes, wir nennen $Z_{w}$ folglich den Wellenwiderstand der Leitung.
 Kommen wir nun zur verlustbehafteten Leitung.
@@ -572,8 +572,8 @@ u(x,t) =
 \hat{U}_{2} \mathrm{e}^{\alpha x} \cos \left( \omega t + \beta x + \psi_{2} \right).
 \end{equation}
 Die Spannung setzt sich also aus zwei Einzelspannungen zusammen. Der Faktor $\exp(-\alpha x)$ bewirkt ein
-exponentiellen Abfall der Teilspannung entlang der positiven $x$-Achse. Für die zweite Teilspannung bewirkt
-$\exp(\alpha x)$ einen exponentiellen Abfall in die negative $x$-Richtung der Amplitude.
+exponentiellen Abfall der Teilspannung entlang der positiven $z$-Achse. Für die zweite Teilspannung bewirkt
+$\exp(\alpha x)$ einen exponentiellen Abfall in die negative $z$-Richtung der Amplitude.
 
 \subsubsection{Wellenlänge}
 
